# gameserver

./: ARCHITECTURE_DIAGRAM.md  CMakeLists.txt  MOBS_SYSTEM.md  QUICK_REFERENCE.md  README.md  STRUCTURE.md  build.sh  install_dependencies_linux.sh  install_dependencies_mac.sh  setup_dependencies.sh  vcpkg.json
.github/: dependabot.yml
client/: build.sh
client/config/: input_config.json
client/include/client/: ConnectionState.hpp  GLCanvas.hpp  GameClient.hpp  InputEvents.hpp  InputManager.hpp  NetworkClient.hpp  RenderSystem.hpp
client/src/: ClientApp.cpp  ClientFrame.cpp  ConnectionState.cpp  GameWorld.cpp  InputManager.cpp  NetworkClient.cpp  main.cpp
client/src/python/: PythonScriptManager.cpp
clients/agdk-imgui/: AndroidManifest.xml  CMakeLists.txt  build.gradle
clients/agdk-imgui/assets/config/: config.json
clients/agdk-imgui/assets/shaders/: basic.frag  basic.vert
clients/agdk-imgui/include/: EntityState.hpp  GameClient.hpp  GameState.hpp  InputHandler.hpp  NetworkClient.hpp  Renderer.hpp  ShaderProgram.hpp  TextureManager.hpp  UIManager.hpp
clients/agdk-imgui/src/: AndroidMain.cpp  EntityState.cpp  GameClient.cpp  GameState.cpp  InputHandler.cpp  NetworkClient.cpp  Renderer.cpp  ShaderProgram.cpp  TextureManager.cpp  UIManager.cpp
clients/ogre3d-py/: README.MD  main.py  requirements.txt  run_client.bat  run_client.sh  setup.py
clients/ogre3d-py/game/: __init__.py
clients/ogre3d-py/gui/: __init__.py  input.py
clients/ogre3d-py/network/: __init__.py  protocol.py
clients/ogre3d-py/renderer/: __init__.py
clients/wx-cpp/: CMakeLists.txt  STRUCTURE.md
clients/wx-cpp/config/: network_config.json
clients/wx-cpp/include/client/: Camera.hpp  ClientFrame.hpp  EventDispatcher.hpp  NetworkMonitor.hpp  UIComponents.hpp
clients/wx-cpp/include/python/: PythonScriptManager.hpp  ScriptBindings.hpp
clients/wx-cpp/scripts/: game_scripts.py
clients/wx-cpp/src/: EventDispatcher.cpp  GLCanvas.cpp  GameClient.cpp  NetworkClient.cpp
config/: config.json  items.json  loot_tables.json
examples/: logging.json  server.cpp  test.py
include/: binary_protocol.hpp  debug.hpp  game_client.hpp  game_server.hpp  logger.hpp  python_embedder.hpp
include/config/: ConfigManager.hpp
include/database/: CitusClient.hpp  DatabasePool.hpp
include/game/: ChunkCache.hpp  ChunkLOD.hpp  ChunkPool.hpp  ChunkStreamer.hpp  CollisionSystem.hpp  EntityManager.hpp  GameEntity.hpp  GameLogic.hpp  InventorySystem.hpp  LootItem.hpp  LootTable.hpp  MobSystem.hpp  NPCSystem.hpp  PlayerManager.hpp  WorldChunk.hpp  WorldGenerator.hpp
include/logging/: Logger.hpp
include/network/: ConnectionManager.hpp  GameServer.hpp  GameSession.hpp
include/process/: ProcessPool.hpp
include/python/: engine.hpp
include/scripting/: PythonEvent.hpp  PythonModule.hpp  PythonScripting.hpp
scripts/: db.sql  game_events.py  loot_handlers.py  mobs.py  quests.py
scripts/client/: ui_handlers.py
scripts/server/: game_logic.py
src/: debug.cpp  logger.cpp  main.cpp  python_embedder.cpp
src/config/: ConfigManager.cpp
src/database/: CitusClient.cpp  DatabasePool.cpp
src/game/: ChunkCache.cpp  ChunkLOD.cpp  ChunkPool.cpp  ChunkStreamer.cpp  GameEntity.cpp  GameLogic.cpp  InventorySystem.cpp  LootItem.cpp  LootTable.cpp  MobSystem.cpp  NPCSystem.cpp  PlayerManager.cpp  WorldChunk.cpp  WorldGenerator.cpp
src/logging/: Logger.cpp
src/network/: ConnectionManager.cpp  GameServer.cpp  GameSession.cpp
src/process/: ProcessPool.cpp
src/scripting/: PythonAPI.cpp  PythonScripting.cpp
